ah bug relating to &nbsp NON-BREAKING space no wrapping around divs

--- a/v3/css/pytutor.css
+++ b/v3/css/pytutor.css
@@ -675,7 +675,7 @@ div.ExecutionVisualizer .vizTitleText {
 
 div.ExecutionVisualizer div#vizHeader {
   margin-bottom: 10px;
-  width: 800px;
-  max-width: 800px;
+  width: 700px;
+  max-width: 700px;
 }
 
